--- a/.github/workflows/h2ogpte.yaml
+++ b/.github/workflows/h2ogpte.yaml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - name: h2oGPTe Agent Assistant
         id: h2ogpte-agent-assistant
-        uses: h2oai/h2ogpte-action@v0.2.2-beta
+        uses: h2oai/h2ogpte-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           h2ogpte_api_key: ${{ secrets.H2OGPTE_API_KEY }}
@@ -43,3 +43,4 @@ jobs:
           agent_max_turns: "auto" # agent_max_turns must be one of: {"auto", 5, 10, 15, 20}
           agent_accuracy: "standard" # agent_accuracy must be one of: {"quick", "basic", "standard", "maximum"}
           agent_total_timeout: 3600 # agent_total_timeout must be a positive integer in seconds
+          collection_id: "7322e0a0-0d63-4bd1-a4ab-31a6ae99e429"
