--- a/.github/workflows/h2ogpte.yaml
+++ b/.github/workflows/h2ogpte.yaml
@@ -58,6 +58,8 @@ jobs:
             pii_detection_llm_input_action: "redact"
             pii_detection_llm_output_action: "redact"
             exception_message: "Test"
+            prompt_guard_labels_to_flag:
+              - JAILBREAK
             guardrails_labels_to_flag: 
               - Violent Crimes
               - Non-Violent Crimes
