Non-existent files

--- a/.github/workflows/h2ogpte.yaml
+++ b/.github/workflows/h2ogpte.yaml
@@ -36,7 +36,7 @@ jobs:
           sparse-checkout-cone: true
       - name: h2oGPTe Agent Assistant
         id: h2ogpte-agent-assistant
-        uses: Sanktrip/h2ogpte-action@feat/deterministic-empty-instructions
+        uses: Sanktrip/h2ogpte-action@feat/non-existent-files
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           h2ogpte_api_key: ${{ secrets.H2OGPTE_API_KEY }}
